--- a/.github/workflows/issues-translate-bot.yml
+++ b/.github/workflows/issues-translate-bot.yml
@@ -1,11 +1,8 @@
 name: 'issue-comment-translator'
-on: # only support issue_comment
-  issue_comment:
-    branches:
-      - main
+on: [issue_comment, issues]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: tomsun28/issues-translate-action@v1.1
+      - uses: tomsun28/issues-translate-action@v2.0
