--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,4 @@
 # These are supported funding model platforms
 
-github: [tomsun28]
-custom: ["https://www.paypal.me/tomsun28", tomsun28]
+custom: ["https://www.paypal.me/tomsun28"]
 
