--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-custom: ["https://www.paypal.me/tomsun28"]
+custom: ["https://www.paypal.me/tomsun28", 'https://su.usthe.com/#/cn/sponsor']
 
